Fixed the Gap Issue

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -209,7 +209,7 @@ footer a:active {
 
   .justify-start {
     justify-content: start !important;
-    gap: 2rem !important;
+    gap: 1rem !important;
   }
 
   .star {
